--- a/src/components/Info/Randomize/Randomize.css
+++ b/src/components/Info/Randomize/Randomize.css
@@ -1,8 +1,8 @@
 .randomize-div {
     position:absolute; 
     top:0; 
-    right:0;
-    margin-right: 1210px;
+    left:0;
+    margin-left: 25px;
 }
 
 .randomize-button {
