--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,24 @@
     transform: rotate(360deg);
   }
 }
+
+.view-favorites {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 25px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 45px;
+  background-color: red;
+  color: black;
+  font-size: 16px;
+  margin-top: 130px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 15px;
+  padding-left: 15px;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
