--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@
   display: flex;
   flex-direction: column;
   border-radius: 45px;
-  background-color: red;
-  color: black;
+  background-color: rgb(181, 47, 47);
+  color: white;
   font-size: 16px;
   margin-top: 130px;
   padding-top: 15px;
