--- a/src/components/Info/Randomize/Randomize.css
+++ b/src/components/Info/Randomize/Randomize.css
@@ -7,8 +7,8 @@
 
 .randomize-button {
     border-radius: 45px;
-    background-color: red;
-    color: black;
+    background-color: rgb(181, 47, 47);
+    color: white;
     font-size: 16px;
     margin-top: 30px;
     padding-top: 15px;
