--- a/src/components/ViewFavorites/viewfavorites.css
+++ b/src/components/ViewFavorites/viewfavorites.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     padding-top: 35px;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
 }
 
 .favorites-image {
@@ -22,4 +25,24 @@
 
 .favorites-seperator {
     margin-bottom: 30px;
+    margin-top: 30px;
+    display: none;
+}
+
+.remove-button {
+        border-radius: 45px;
+        background-color: rgb(181, 47, 47);
+        color: white;
+        font-size: 16px;
+        margin-top: 30px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-right: 15px;
+        padding-left: 15px;
+        font-family: "Roboto", sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        width: 30%;
+        margin: auto;
+      
 }
