--- a/src/components/Notes/notes.css
+++ b/src/components/Notes/notes.css
@@ -1,7 +1,50 @@
 .notes-box {
-    position:absolute;
-    left:0;
-    bottom: 100;
-    color: red;
+    /* border: 1px solid rgb(181, 47, 47); */
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    right: 85%;
+    width: 10vw;
+    height: 50vh;
+    padding-top: 100px;
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 4px;
+
+}
+
+.notes-header {
+    text-transform: uppercase;
+}
+
+.notes-button {
+  border-radius: 45px;
+  background-color: rgb(181, 47, 47);
+  color: white;
+  font-size: 14px;
+  margin-top: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.notes-input {
+    margin-top: 20px;
+    padding-top: 20px;
+    word-wrap: break-word;
+
+}
+
+.notes {
+    font-size: 16px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 15px;
+    border: 1px solid rgb(181, 47, 47);
 
 }
