--- a/src/components/Notes/notes.css
+++ b/src/components/Notes/notes.css
@@ -51,10 +51,30 @@
   letter-spacing: 4px;
 }
 
+.notes-button:hover {
+    background-color: #ffcdd2;
+    color: rgb(181, 47, 47);
+}
+
 .notes-input {
     margin-top: 20px;
     padding-top: 20px;
     word-wrap: break-word;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    border: 2px solid rgb(181, 47, 47);
+    /* background-color: white; */
+    background-color: #ffcdd2;
+    /* box-shadow: 3px 3px 5px #ffcdd2; */
+}
+
+.notes-input:focus {
+    outline:none;
+    background-color: white;
+    /* background-color: #ffcdd2; */
+    box-shadow: 3px 3px 5px #ffcdd2;
+
 }
 
 .notes {
